changed an overflow issue on smaller screen size

--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -4,6 +4,7 @@
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
+    overflow: hidden;
     &-nav-center {
         padding: 0.5rem;
         display: flex;
