--- a/scss/style.css
+++ b/scss/style.css
@@ -38,6 +38,7 @@ a {
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
+    overflow: hidden;
 }
 
 .header-nav-center {
